[package]
name = "raur"
version = "0.1.0"
authors = ["Tony Benoy <me@tonybenoy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json ="1.0.59"
serde = { version = "1.0", features = ["derive"] }
strum = "0.21"
strum_macros = "0.21"